--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <nav id="navbar">
       <div class="logo">
-        <img src="img./logo.jpg" alt="" />
+        <img src="./img/logo.jpg" alt="" />
       </div>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -35,7 +35,7 @@
       <h1 class="h-primary center">Our Services</h1>
       <div id="services">
         <div class="box">
-          <img src="img./adventure.jpg" alt="" />
+          <img src="./img/adventure.jpg" alt="" />
           <h2 class="h-secondary center">Adventure</h2>
           <p>
             Adventure is a mental encouragement. It involves adventurous tasks
@@ -47,7 +47,7 @@
         </div>
 
         <div class="box">
-          <img src="img./roadtrip.jpg" alt="" />
+          <img src="./img/roadtrip.jpg" alt="" />
           <h2 class="h-secondary center">Road Trip</h2>
           <p>
             Going on road trips is always a nice and refreshing experience. It
@@ -59,7 +59,7 @@
         </div>
 
         <div class="box">
-          <img src="img./climbing.jpg" alt="" />
+          <img src="./img./climbing.jpg" alt="" />
           <h2 class="h-secondary center">Climbing</h2>
           <p>
             climbing is one of the most adventurous sports which give an
@@ -75,13 +75,13 @@
       <h1 class="h-primary center">Our Clients</h1>
       <div id="clients">
         <div class="client-item">
-          <img src="img./logo2.webp" alt="">
+          <img src="./img/logo2.webp" alt="">
         </div>
         <div class="client-item">
-          <img src="img./logo3.jpg" alt="">
+          <img src="./img/logo3.jpg" alt="">
         </div>
         <div class="client-item">
-          <img src="img./logo4.jpg" alt="">
+          <img src="./img/logo4.jpg" alt="">
         </div>
       </div>
     </section>
